--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,22 @@
-<footer class="site-footer">
-
+<footer>
   <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
+    <div class="footer-content">
+      <h3>lorem ipsum</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis cum dolorem nulla officiis aliquid. Exercitationem unde labore tempore vel ex, modi quia dolorem inventore, omnis, veritatis fuga odit harum porro.</p>
+      <p>subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
     </div>
-
+    <div>
+      <ul>
+        <li>
+        <a href="http://twitter.com/{{ site.twitter_username }}">
+          <img src="#" alt="twitter logo">
+        </a></li>
+        <li>
+          <a href="http://github.com/{{ site.github_username }}">
+            <img src="#" alt="github logo">
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
-
 </footer>
