Added dummy logos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,11 +9,11 @@
       <ul>
         <li>
         <a href="http://twitter.com/{{ site.twitter_username }}">
-          <img src="#" alt="twitter logo">
+          <img src="/img/twitter.png" alt="twitter logo">
         </a></li>
         <li>
           <a href="http://github.com/{{ site.github_username }}">
-            <img src="#" alt="github logo">
+            <img src="/img/github.png" alt="github logo">
           </a>
         </li>
       </ul>
