Working on header area, as well as it's CSS

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
-<header>
-  <h1><a href="/">Design Portfolio</a></h1>
-  <nav>
+<header class="header--index">
+  <div class="container">
+    <h1 class="headline--index">
+      My name is <strong>Robin Fox</strong> and I enjoy designing and developing websites and mobile applications. 
+    </h1>
+    <nav class="main-nav">
     <ul>
       {% for link in site.links %}
         <li>
@@ -9,4 +12,5 @@
       {% endfor %}
     </ul>
   </nav>
+  </div>
 </header>
