Working on CSS for all the pages

--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,4 +1,4 @@
-<li class="project">
+<li class="project--item">
 	<a href="{{ project.url }}">
 		<figure>
 			<img src="{{ project.featured_image }}" alt="Thumbnail for {{ project.title }}">
