--- a/_sass/1-base/_layout.scss
+++ b/_sass/1-base/_layout.scss
@@ -1,3 +1,9 @@
+.container {
+	margin: 0 auto;
+	max-width: 37.5rem;
+	padding: 7.5rem 1.25rem;
+}
+
 ul {
 	margin: 1em 0;
 	list-style: none;
@@ -7,3 +13,4 @@ li {
 	display: inline-block;
 	margin: 0 0.5em;
 }
+
