--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
-<ul class="post-tags">
+<ul>
 	{% for tag in post.tags %}
 	<li>
-		<img src="/img/icon-{{tag}}.png" alt="{{ tag }}">
+		<img class="article--tags" src="/img/icon-{{tag}}.png" alt="{{ tag }}">
 	</li>
 	{% endfor %}
 </ul>
