--- a/_sass/1-base/_base.scss
+++ b/_sass/1-base/_base.scss
@@ -1,3 +1,14 @@
+html {
+    text-align: center;
+    text-rendering: geometricPrecision;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+
+
+
+
 /**
  * Reset some basic elements
  */
@@ -96,7 +107,6 @@ a {
 
     &:hover {
         color: $text-color;
-        text-decoration: underline;
     }
 }
 
