Making Css changes to all of website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,9 @@
     </h1>
     <nav class="main-nav">
     <ul>
+      <li>
+        <a href="/">home</a>
+      </li>
       {% for link in site.links %}
         <li>
           <a href="{{ link.url }}">{{ link.title }}</a>
