--- a/_sass/2-modules/_section-projects.scss
+++ b/_sass/2-modules/_section-projects.scss
@@ -1,6 +1,8 @@
 // Section
 .section--projects {
 	padding: 0 1.25rem 2.5rem;
+	z-index: 3;
+	background-image: linear-gradient(to right, #eacda3, #d6ae7b);
 }
 
 // ul
