--- a/css/main.scss
+++ b/css/main.scss
@@ -59,6 +59,7 @@ $on-laptop:        800px;
         "2-modules/images",
         "2-modules/about",
         "2-modules/button",
-        "2-modules/social"
+        "2-modules/social",
+        "2-modules/footer"
 
 ;
