--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,22 +1,5 @@
-<footer>
-  <div class="wrapper">
-    <div class="footer-content">
-      <h3>lorem ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis cum dolorem nulla officiis aliquid. Exercitationem unde labore tempore vel ex, modi quia dolorem inventore, omnis, veritatis fuga odit harum porro.</p>
-      <p>subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-    </div>
-    <div>
-      <ul>
-        <li>
-        <a href="http://twitter.com/{{ site.twitter_username }}">
-          <img src="" alt="twitter logo">
-        </a></li>
-        <li>
-          <a href="http://github.com/{{ site.github_username }}">
-            <img src="" alt="github logo">
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<footer class="footer">
+  <small>
+    Created with <span class="img-bridge hide-text">love</span> in San Francisco
+  </small>
 </footer>
