--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="container">
+<article>
 	<header>
 		<h1>{{ page.title }}</h1>
 		{% if page.featured_image %}
