--- a/_sass/1-base/_base.scss
+++ b/_sass/1-base/_base.scss
@@ -3,6 +3,7 @@ html {
     text-rendering: geometricPrecision;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    background-color: #9a8478;
 }
 
 
