--- a/_sass/2-modules/_header.scss
+++ b/_sass/2-modules/_header.scss
@@ -1,7 +1,9 @@
 .header--index {
 	display: flex;
 	align-items: center;
-	min-height: 100vh;
+	min-height: calc(100vh - 2.5rem);
+	background-image: linear-gradient(to right, #eacda3, #d6ae7b);
+	z-index: 2;
 }
 
 .headline--index {
