--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,5 +1,5 @@
 <li class="project--item">
-	<a href="{{ project.url }}">
+	<a class="project--link" href="{{ project.url }}">
 		<figure>
 			<img src="{{ project.featured_image }}" alt="Thumbnail for {{ project.title }}">
 			<figcaption class="project-caption">
