--- a/_sass/2-modules/_section-projects.scss
+++ b/_sass/2-modules/_section-projects.scss
@@ -1,8 +1,8 @@
 // Section
 .section--projects {
-	padding: 0 1.25rem 2.5rem;
+	padding: 0 1.25rem 0.5rem;
 	z-index: 3;
-	background-image: linear-gradient(to right, #eacda3, #d6ae7b);
+	//background-image: linear-gradient(to right, #eacda3, #d6ae7b);
 }
 
 // ul
@@ -25,4 +25,24 @@
 	// height: 25rem;
 	// width: 25rem;
 	position: relative;
+}
+
+// All work page
+
+.project-list {
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+
+	.project--item {
+		padding-bottom: 2rem;
+	}
+
+	.project--item:last-child {
+		padding-bottom: 0;
+	}
+}
+
+.project-caption {
+	padding-top: 0.7rem;
+	font-size: 1rem;
 }
