--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,14 +1,14 @@
-<ul>
+<ul class="tag--block">
 	{% for tag in post.tags %}
-	<li>
-		<img class="article--tags" src="/img/icon-{{tag}}.png" alt="{{ tag }}">
+	<li class="tag--list">
+		<span class="{{ tag }}" title="{{ tag }}"></span>
 	</li>
 	{% endfor %}
 </ul>
 <h2>
 	<a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
 </h2>
-<p>
+<p class="post-snippet">
 	{{ post.content | strip_html | strip_newlines | truncate: 200 }}
 </p>
 <p class="post-read-more-link">
