--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article>
+<article class="article--container">
 	<header>
 		<h1>{{ page.title }}</h1>
 		<p>
@@ -13,7 +13,7 @@ layout: default
 			</div>
 		{% endif %}
 	</header>
-	<div class="post-body">
+	<div class="post--body">
 		{{ content }}
 	</div>
 </article>
