--- a/_sass/2-modules/_images.scss
+++ b/_sass/2-modules/_images.scss
@@ -3,4 +3,11 @@
 	width: em(100px);
 	height: em(100px);
 	border-radius: 50%;
+	margin-top: 1rem;
+	margin-bottom: 2rem;
+}
+
+// Articles and work featured images
+.post-image {
+	margin-bottom: 1rem;
 }
