--- a/css/main.scss
+++ b/css/main.scss
@@ -56,10 +56,14 @@ $on-laptop:        800px;
         "2-modules/section-projects",
         "2-modules/section-articles",
         "2-modules/section-connect",
+        "2-modules/section-about-me",
+        "2-modules/section-all-work",
+        "2-modules/section-posts",
         "2-modules/images",
         "2-modules/about",
         "2-modules/button",
         "2-modules/social",
+        "2-modules/tags",
         "2-modules/footer"
 
 ;
