--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <section class="section--about-me">
 	<article class="article--content">
 		<header class="headline--article">
-			<h1>{{ page.title }}</h1>
+			<h1 class="header--title">{{ page.title }}</h1>
 			{% if page.featured_image %}
 				<img class="image--self" src="{{ page.featured_image }}" title="Picture of yours truly" alt="{{ page.title }} featured image">
 			{% endif %}
