--- a/_sass/2-modules/_section-connect.scss
+++ b/_sass/2-modules/_section-connect.scss
@@ -1,6 +1,6 @@
 // Section
 .section--connect {
-	background-image: linear-gradient(to right, #eacda3, #d6ae7b);
+	background-image: linear-gradient(to right, #a73737, #7a2828);
 	margin-bottom: 3.75rem;
 	position: relative;
 	z-index: 5;
