--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,10 +1,10 @@
-<ul class="tag--block">
+<!-- <ul class="tag--block">
 	{% for tag in post.tags %}
 	<li class="tag--list">
 		<span class="{{ tag }}" title="{{ tag }}"></span>
 	</li>
 	{% endfor %}
-</ul>
+</ul> -->
 <h2>
 	<a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
 </h2>
