--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <article class="article--container">
-	<header>
-		<h1>{{ page.title }}</h1>
-		<p>
+	<header class="heading--articles">
+		<h1 class="page-title">{{ page.title }}</h1>
+		<p class="post-date">
 			posted on {{ page.date | date: "%b %-d, %Y"}}
 		</p>
 		{% if page.featured_image %}
