--- a/_sass/2-modules/_nav.scss
+++ b/_sass/2-modules/_nav.scss
@@ -1,6 +1,3 @@
-.main-nav {
-	
-}
 .main-nav ul {
 	display: flex;
 	font-size: 1.5rem;
@@ -8,7 +5,21 @@
 	margin: 0;
 	padding-left: 0;
 
+	@include media-query($phone-480-landscape) {
+	    font-size: 1.1rem;
+	}
+
+	@include media-query($phone-375-portrait) {
+	    display: block;
+	    font-size: 1.23rem;
+	}
+
+	@include media-query($phone-320-portrait) {
+	    font-size: 1rem;
+	}
+
 	& li {
 		flex-grow: 1;
 	}
 }
+
