Working on CSS for all parts of site.  Particularly media Query changes to header and posts

--- a/_sass/1-base/_base.scss
+++ b/_sass/1-base/_base.scss
@@ -4,6 +4,7 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     background-color: rgb(33, 0, 10);
+    overflow-x: hidden;
 }
 
 
@@ -208,4 +209,3 @@ pre {
         }
     }
 }
-
