--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #4D4946;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
@@ -28,7 +28,8 @@ $on-palm:          600px;
 $on-laptop:        800px;
 $tablet-portrait:  768px;
 $tablet-landscape: 1024px;
-$hd-laptop-landscape: 1440px; 
+$hd-laptop-landscape: 1440px;
+$phone-736-landscape: 736px;
 $phone-568-landscape: 568px;
 $phone-480-landscape: 480px;
 $phone-414-portrait: 414px;
