--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,16 +1,9 @@
-<!-- <ul class="tag--block">
-	{% for tag in post.tags %}
-	<li class="tag--list">
-		<span class="{{ tag }}" title="{{ tag }}"></span>
-	</li>
-	{% endfor %}
-</ul> -->
-<h2>
+<h2 class="heading--posts">
 	<a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
 </h2>
 <p class="post-snippet">
 	{{ post.content | strip_html | strip_newlines | truncate: 200 }}
 </p>
 <p class="post-read-more-link">
-	<a href="{{ post.url | prepend: site.baseurl }}">read more...</a>
+	<a class="post--read-more" href="{{ post.url | prepend: site.baseurl }}">read more...</a>
 </p>
