--- a/_sass/2-modules/_section-posts.scss
+++ b/_sass/2-modules/_section-posts.scss
@@ -1,9 +1,10 @@
 .article--container {
 	position: relative;
 	margin: 0 auto 3.75rem;
-    max-width: 37.5rem;
-    padding: 0.5rem 1.25rem;
-    z-index: 5;
+  max-width: 52.5rem;
+  padding-right: 1.25rem;
+	padding-left: 1.25rem;
+  z-index: 5;
 }
 
 .post-snippet {
@@ -19,7 +20,7 @@
 	}
 }
 
-// Single blog post 
+// Single blog post
 	// Title
 	.page-title {
 		margin-bottom: 0;
@@ -27,7 +28,7 @@
 
 	// Blog post date
 	.post-date {
-		font-size: 0.7rem;
+		font-size: 0.9rem;
 	}
 
 	// Body of post
