--- a/_sass/2-modules/_section-projects.scss
+++ b/_sass/2-modules/_section-projects.scss
@@ -2,7 +2,7 @@
 .section--projects {
 	padding: 0 1.25rem 0.5rem;
 	z-index: 3;
-	background-image: linear-gradient(to right, #a73737, #7a2828);
+	background: #F9F9F9;
 }
 
 // ul
@@ -14,16 +14,16 @@
 	max-width: 100rem;
 	padding-left: 0;
 
+	@include media-query($hd-laptop-landscape) {
+			flex-flow: row nowrap;
+	}
+
 	@include media-query($tablet-landscape) {
 	    flex-flow: row;
 	}
 
 	@include media-query($tablet-portrait) {
 	    flex-flow: row wrap;
-	}
-
-	@include media-query($hd-laptop-landscape) {
-	    flex-flow: row nowrap;
 	}
 
 }
@@ -61,12 +61,7 @@
 }
 
 .project-caption {
-	color: rgba(255, 255, 255, 0.4);
+	color: $text-color;
 	padding-top: 0.7rem;
 	font-size: 1.3rem;
-	transition: all 0.3s ease-in;
-
-	&:hover {
-		color: #fff;
-	}
 }
