--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <small>
-    Created with <span class="img-bridge hide-text">love</span> in San Francisco
+      &copy; <script type="text/javascript"> document.write(new Date().getFullYear());</script> Robin Fox
   </small>
 </footer>
