--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,4 +16,24 @@ layout: default
 	<div class="post--body">
 		{{ content }}
 	</div>
+	{% if page.post_images %}
+	<section class="post--images">
+		<a href="http://bradfrost.github.com/this-is-responsive/patterns/images/fpo_landscape.png" class="box let-there-be-light">
+			<span class="msg">Let there be light</span>
+			{% responsive_image path: img/image.png alt: "Project Images" title: "Project Images"%}
+		</a>
+		<a href="http://bradfrost.github.com/this-is-responsive/patterns/images/fpo_landscape.png" class="box let-there-be-light">
+			<span class="msg">Let there be light</span>
+			{% responsive_image path: img/image.png alt: "Project Images" title: "Project Images"%}
+		</a>
+		<a href="http://bradfrost.github.com/this-is-responsive/patterns/images/fpo_landscape.png" class="box let-there-be-light">
+			<span class="msg">Let there be light</span>
+			{% responsive_image path: img/image.png alt: "Project Images" title: "Project Images"%}
+		</a>
+		<a href="http://bradfrost.github.com/this-is-responsive/patterns/images/fpo_landscape.png" class="box let-there-be-light">
+			<span class="msg">Let there be light</span>
+			{% responsive_image path: img/image.png alt: "Project Images" title: "Project Images"%}
+		</a>
+	</section>
+	{% endif %}
 </article>
