Fixing some more CSS problems

--- a/_sass/2-modules/_lightbox.scss
+++ b/_sass/2-modules/_lightbox.scss
@@ -9,10 +9,9 @@
   }
 
 .box {
-  // display: flex;
   position: relative;
   text-align: center;
-  padding: .125rem .125rem;
+  padding: 0.4rem 0.4rem;
 
   @include media-query($phone-736-landscape) {
       width: calc(350px - 15px);
@@ -27,7 +26,7 @@
   }
 
   @include media-query($phone-600-portrait) {
-      width: calc(350px - 70px);
+      width: calc(350px - 0px);
   }
 }
 
