Changed responsive image gem used and worked on CSS for image area

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,19 +20,19 @@ layout: default
 	<section class="post--images">
 		<a href="http://bradfrost.github.com/this-is-responsive/patterns/images/fpo_landscape.png" class="box let-there-be-light">
 			<span class="msg">Let there be light</span>
-			{% responsive_image path: img/image.png alt: "Project Images" title: "Project Images" template: _includes/responsive-image.html %}
+			{% image_tag src="/img/girl.jpg" width="480" %}
 		</a>
 		<a href="http://bradfrost.github.com/this-is-responsive/patterns/images/fpo_landscape.png" class="box let-there-be-light">
 			<span class="msg">Let there be light</span>
-			{% responsive_image path: img/image.png alt: "Project Images" title: "Project Images" template: _includes/responsive-image.html  %}
+			{% image_tag src="/img/girl.jpg" width="480" %}
 		</a>
 		<a href="http://bradfrost.github.com/this-is-responsive/patterns/images/fpo_landscape.png" class="box let-there-be-light">
 			<span class="msg">Let there be light</span>
-			{% responsive_image path: img/image.png alt: "Project Images" title: "Project Images" template: _includes/responsive-image.html  %}
+			{% image_tag src="/img/girl.jpg" width="480" %}
 		</a>
 		<a href="http://bradfrost.github.com/this-is-responsive/patterns/images/fpo_landscape.png" class="box let-there-be-light">
 			<span class="msg">Let there be light</span>
-			{% responsive_image path: img/image.png alt: "Project Images" title: "Project Images" template: _includes/responsive-image.html  %}
+			{% image_tag src="/img/girl.jpg" width="480" %}
 		</a>
 	</section>
 	{% endif %}
