--- a/_sass/2-modules/_section-articles.scss
+++ b/_sass/2-modules/_section-articles.scss
@@ -11,7 +11,7 @@
 		padding: 0 3.25rem 2.5rem;
 	}
 	@include media-query($phone-736-landscape) {
-  	padding: 0 1.25rem 2.5rem;
+  	padding: 0 .5rem 2.5rem;
 	}
 }
 
