--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,7 @@ $phone-320-portrait: 320px;
     		"1-base/layout",
     		"1-base/syntax-highlighting",
     		"2-modules/header",
+        "2-modules/foxpaw",
     		"2-modules/nav",
         "2-modules/section-projects",
         "2-modules/section-articles",
