--- a/_sass/2-modules/_section-projects.scss
+++ b/_sass/2-modules/_section-projects.scss
@@ -1,8 +1,12 @@
 // Section
 .section--projects {
-	padding: 0 1.25rem 0.5rem;
+	padding: 0 0 0.5rem 0;
 	z-index: 3;
 	background: #F9F9F9;
+	@include media-query($phone-736-landscape) {
+			// padding-right: 1rem;
+			// padding-left: 1rem;
+	}
 }
 
 // ul
@@ -38,11 +42,37 @@
 	position: relative;
 }
 
+// Images of projects on homepage
+.project--link figure img {
+	@include media-query($tablet-landscape) {
+	  max-width: 100%;
+		max-height: 100%;
+	}
+	@include media-query($tablet-portrait) {
+	  max-width: 100%;
+		max-height: 100%;
+	}
+	@include media-query($phone-414-portrait) {
+	  max-width: 100%;
+		max-height: 100%;
+	}
+	@include media-query($phone-736-landscape) {
+	  max-width: 100%;
+		max-height: 100%;
+	}
+	max-width: rem(350);
+	max-height: rem(262);
+}
+
+.project--link figure img:last-child {
+	margin-right:0
+}
+
 // All work page
 
 .project-list {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
+	// padding-top: 2rem;
+	// padding-bottom: 2rem;
 
 	.project--item {
 		padding-bottom: 2rem;
@@ -64,4 +94,46 @@
 	color: $text-color;
 	padding-top: 0.7rem;
 	font-size: 1.3rem;
+}
+
+
+// Invision project
+.dank_emote {
+	width: rem(20);
+	height: rem(20);
+}
+
+.invision {
+	text-align: center;
+	@include media-query($tablet-landscape) {
+		visibility: hidden;
+    display: none;
+	}
+}
+
+.invision_no-display {
+	display: none;
+	@include media-query($tablet-landscape) {
+    display: block;
+	}
+}
+
+//SF project
+
+.sfv_video {
+	text-align: center;
+	& video {
+		width: rem(375);
+		height: rem(667);
+
+		@include media-query($phone-375-portrait) {
+			width: rem(330);
+			height: auto;
+		}
+		@include media-query($phone-320-portrait) {
+			width: rem(270);
+			height: auto;
+		}
+	}
+
 }
