--- a/_sass/2-modules/_section-posts.scss
+++ b/_sass/2-modules/_section-posts.scss
@@ -54,6 +54,10 @@
 		}
 
 		& img {
+			display: block;
+			margin-top: 0;
+			margin-left: auto;
+			margin-right: auto;
 			margin-bottom: 2rem;
 		}
 	}
