--- a/_sass/2-modules/_section-projects.scss
+++ b/_sass/2-modules/_section-projects.scss
@@ -163,3 +163,11 @@
 
 	}
 }
+
+// Beast Mode App
+.ice_city {
+	display: inline-block!important;
+	width: 4rem;
+	height: 2rem;
+	margin-bottom: .4rem!important;
+}
