Moved CSS to bottom of body for CRP

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,12 @@
   <body>
 
     {% include header.html %}
-    
-      {{ content }}
-    
-    {% include footer.html %}
 
+      {{ content }}
+
+    {% include footer.html %}
+    
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   </body>
 
 </html>
