--- a/_sass/2-modules/_section-posts.scss
+++ b/_sass/2-modules/_section-posts.scss
@@ -1,7 +1,7 @@
 .article--container {
 	position: relative;
 	margin: 0 auto 3.75rem;
-  max-width: 52.5rem;
+  max-width: 44.5rem;
   padding-right: 1.25rem;
 	padding-left: 1.25rem;
   z-index: 5;
@@ -43,7 +43,7 @@
 
 		& p {
 			line-height: 1.8;
-			margin-bottom: 1rem;
+			margin-bottom: 2rem;
 		}
 
 		& ul {
@@ -59,6 +59,6 @@
 			margin-top: 0;
 			margin-left: auto;
 			margin-right: auto;
-			margin-bottom: 2rem;
+			// margin-bottom: 2rem;
 		}
 	}
