--- a/_sass/2-modules/_section-projects.scss
+++ b/_sass/2-modules/_section-projects.scss
@@ -36,28 +36,18 @@
 	display: inline-block;
 	flex: 1 auto;
 	position: relative;
+
 }
 
 // Images of projects on homepage
 .project--link figure img {
-	@include media-query($tablet-landscape) {
-	  max-width: rem(800);
-		max-height: 100%;
-	}
-	@include media-query($tablet-portrait) {
-	  max-width: 100%;
-		max-height: 100%;
-	}
-	@include media-query($phone-414-portrait) {
-	  max-width: 100%;
-		max-height: 100%;
-	}
-	@include media-query($phone-736-landscape) {
-	  max-width: 100%;
-		max-height: 100%;
-	}
 	max-width: rem(350);
 	max-height: rem(262);
+
+	@media (min-width: 320px) and (orientation: portrait) {
+		max-width: rem(320);
+		max-height: 100%;
+	}
 }
 
 .project--link figure img:last-child {
@@ -67,11 +57,12 @@
 // All work page
 
 .project-list {
-	// padding-top: 2rem;
-	// padding-bottom: 2rem;
-
+	// Fixing the indent in firefox
 	.project--item {
 		padding-bottom: 2rem;
+		@media (max-width: 375px) and (orientation: portrait) {
+			margin: 0;
+		}
 	}
 
 	.project--item:last-child {
@@ -162,10 +153,25 @@
 	}
 }
 
+
+
 // Beast Mode App
 .ice_city {
 	display: inline-block!important;
 	width: 4rem;
 	height: 2rem;
 	margin-bottom: .4rem!important;
+}
+
+
+// Twitch Videos
+.twitch_video video{
+	display: block;
+	margin-top: 0;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 2rem;
+	width: calc(100% - 50px);
+	height: auto;
+  vertical-align: middle;
 }
