Added media query for desktop sizes for project section

--- a/_sass/2-modules/_section-projects.scss
+++ b/_sass/2-modules/_section-projects.scss
@@ -57,6 +57,11 @@
 // All work page
 
 .project-list {
+	@media (min-width: 1441px){
+		max-width: 75rem;
+		margin-left: auto;
+		margin-right: auto;
+	}
 	// Fixing the indent in firefox
 	.project--item {
 		padding-bottom: 2rem;
