Removed dates from posts

--- a/_sass/2-modules/_section-posts.scss
+++ b/_sass/2-modules/_section-posts.scss
@@ -1,7 +1,7 @@
 .article--container {
 	position: relative;
 	margin: 0 auto 3.75rem;
-  max-width: 44.5rem;
+  max-width: 48rem;
   padding-right: 1.25rem;
 	padding-left: 1.25rem;
   z-index: 5;
@@ -23,7 +23,7 @@
 // Single blog post
 	// Title
 	.page-title {
-		margin-bottom: 0;
+		margin-bottom: 1rem;
 	}
 
 	// Blog post date
