--- a/_layouts/beastmode-app.html
+++ b/_layouts/beastmode-app.html
@@ -4,9 +4,9 @@ layout: default
 <article class="article--container">
 	<header class="heading--articles">
 		<h1 class="page-title">{{ page.title }}</h1>
-		<p class="post-date">
+		<!-- <p class="post-date">
 			posted on {{ page.date | date: "%b %-d, %Y"}}
-		</p>
+		</p> -->
 		{% if page.featured_image %}
 			<div class="post-image">
 				<img src="{{ page.featured_image }}" alt="{{ page.title }} featured image">
