Added Javascript jQuery CDN

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,6 @@
 <head>
   <!--
-_/    _/  _/_/_/  _/_/_/    _/_/_/_/      _/      _/  _/_/_/_/
-_/    _/    _/    _/    _/  _/            _/_/  _/_/  _/
-_/_/_/_/    _/    _/_/_/    _/_/_/        _/  _/  _/  _/_/_/
-_/    _/    _/    _/    _/  _/            _/      _/  _/
-_/    _/  _/_/_/  _/    _/  _/_/_/_/      _/      _/  _/_/_/_/
+  I see you!
  -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,9 +14,10 @@ _/    _/  _/_/_/  _/    _/  _/_/_/_/      _/      _/  _/_/_/_/
       color: #202020;
       }
   </style>
-  
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  
 </head>
