Redesigned footer with link to github for portfolio, and removed link to github account

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,3 @@
 <footer class="footer">
-  <small>
-      &copy; <script type="text/javascript"> document.write(new Date().getFullYear());</script> Robin Fox
-  </small>
+  <small class="anchor--jekyll"> &copy; <script type="text/javascript"> document.write(new Date().getFullYear());</script> Robin Fox - <a href="https://github.com/smugfox/smugfox">Made with Jekyll</a></small>
 </footer>
