--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <small class="anchor--jekyll"> &copy; <script type="text/javascript"> document.write(new Date().getFullYear());</script> Robin Fox - <a href="https://github.com/smugfox/smugfox">Made with Jekyll</a></small>
+  <small class="anchor--jekyll"> &copy; <script type="text/javascript"> document.write(new Date().getFullYear());</script> Robin Fox - <a class="rainbow" href="https://github.com/smugfox/smugfox">Made with Jekyll</a></small>
 </footer>
