--- a/_sass/2-modules/_footer.scss
+++ b/_sass/2-modules/_footer.scss
@@ -23,7 +23,7 @@
 .anchor--jekyll a{
 	position: relative;
   color: #fff;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 // Rainbow
